	PR c++/69392 	* lambda.c (lambda_capture_field_type): Handle 'this' specially 	for init-capture, too.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@232746 138bc75d-0d04-0410-961f-82ee72b054a4