gcc/testsuite/g++.dg/cpp1y/lambda-init14.C
@@ -1,0 +1,19 @@
+// PR c++/69392
+// { dg-do compile { target c++14 } }
+
+template <typename T>
+class Foo {
+  public:
+    void foo(void) {}
+    auto getCallableFoo(void) {
+      return
+        [ptr = this]() { ptr->foo(); };
+    }
+};
+
+int main()
+{
+  Foo<int> f;
+  auto callable = f.getCallableFoo();
+  callable();
+}
